--- a/bower.json
+++ b/bower.json
@@ -17,9 +17,17 @@
     "angular-socket-io": "~0.7.0",
     "angular-ui-router": "~0.2.15",
     "angular-validation-match": "~1.5.2",
-    "angular-xeditable": "^0.1.12"
+    "angular-xeditable": "^0.1.12",
+    "ng-file-upload": "^12.0.4",
+    "cloudinary_ng": "^1.0.0",
+    "api-check": "^7.5.5",
+    "angular-formly": "^8.2.0",
+    "angular-formly-templates-bootstrap": "^6.3.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
+  },
+  "resolutions": {
+    "bootstrap": "~3.1.1"
   }
 }
