--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "angular-resource": "~1.5.0",
     "angular-cookies": "~1.5.0",
     "angular-sanitize": "~1.5.0",
-    "angular-bootstrap": "~1.1.2",
+    "angular-bootstrap": "^1.3.2",
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-socket-io": "~0.7.0",
