--- a/bower.json
+++ b/bower.json
@@ -18,11 +18,11 @@
     "angular-ui-router": "~0.2.15",
     "angular-validation-match": "~1.5.2",
     "angular-xeditable": "^0.1.12",
-    "ng-file-upload": "^12.0.4",
-    "cloudinary_ng": "^1.0.0",
     "api-check": "^7.5.5",
     "angular-formly": "^8.2.0",
-    "angular-formly-templates-bootstrap": "^6.3.2"
+    "angular-formly-templates-bootstrap": "^6.3.2",
+    "ng-file-upload": "^12.0.4",
+    "ng-file-upload-shim": "^12.0.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
