--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "composable-middleware": "^0.3.0",
     "compression": "^1.5.2",
     "connect-mongo": "^1.1.0",
+    "connect-multiparty": "^2.0.0",
     "cookie-parser": "^1.3.5",
     "ejs": "^2.3.3",
     "errorhandler": "^1.4.2",
@@ -24,6 +25,7 @@
     "mongoose": "^4.1.2",
     "morgan": "~1.7.0",
     "multer": "^1.1.0",
+    "multiparty": "^4.1.2",
     "passport": "~0.3.0",
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
