--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "angular-formly": "^8.2.0",
     "angular-formly-templates-bootstrap": "^6.3.2",
     "ng-file-upload": "^12.0.4",
-    "ng-file-upload-shim": "^12.0.4"
+    "ng-file-upload-shim": "^12.0.4",
+    "cloudinary_ng": "^1.0.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
